--- a/phlcitycouncil/templates/index.html
+++ b/phlcitycouncil/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-  <h1>Local Library Home</h1>
-  <p>Welcome to LocalLibrary, a website developed by <em>Mozilla Developer Network</em>!</p>
+  <h1>Philadelphia City Council</h1>
+  <p>Welcome to PHL City Council</p>
   <h2>Dynamic content</h2>
   <p>The City Council App has the following record counts:</p>
   <ul>
