--- a/phlcitycouncil/templates/phlcitycouncil/person_detail.html
+++ b/phlcitycouncil/templates/phlcitycouncil/person_detail.html
@@ -9,4 +9,16 @@
 
 <p>Date of Birth: {{ person.date_of_birth }} </p>
 <p>Date of Death: {{ person.date_of_death }} </p>
+
+
+
+<h2>Elections</h2>
+<ul>
+{% for p in person.candidate_set.all %}
+
+<li> {{ p.candidate_election.election_date|date:"Y" }} {{ p.candidate_election.get_election_type_display }} Election, {{ p.candidate_election.election_seat.get_seat_name_display }}: {{ p.get_candidate_results_display }}</li>
+
+{% endfor %}
+</ul>
 {% endblock %}
+
