--- a/phlcitycouncil/templates/phlcitycouncil/election_list.html
+++ b/phlcitycouncil/templates/phlcitycouncil/election_list.html
@@ -4,13 +4,44 @@
 {% block content %}
   <h1>Election List</h1>
   {% if election_list %}
+
+
+<h2>2015 Elections</h2>
+<ul>
+{% for election in election_list %}
+{% if election.election_date|date:"Y" == "2015" %}
+    <li>
+    <a href="#">{{ election.election_date }} {{ election.election_seat }} </a>  
+    </li>
+    {% endif %}
+    {% endfor %}
+</ul>
+
+<h2>2019 Elections</h2>
   <ul>
     {% for election in election_list %}
+    {% if election.election_date|date:"Y" == "2019" %}
       <li>
-        <a href="#">{{ election.election_date }} {{ election.election_seat }}</a>  
+        <a href="#">{{ election.election_date }} {{ election.election_seat }} </a>  
       </li>
-    {% endfor %}
+      {% endif %}
+      {% endfor %}
   </ul>
+
+  <h2>2022 Elections</h2>
+  <ul>
+    {% for election in election_list %}
+    {% if election.election_date|date:"Y" == "2022" %}
+      <li>
+        <a href="#">{{ election.election_date }} {{ election.election_seat }} </a>  
+      </li>
+      {% endif %}
+      {% endfor %}
+  </ul>
+
+
+
+
   {% else %}
     <p>There are no elections on record.</p>
   {% endif %}
