update election detail page with candidate block

--- a/phlcitycouncil/templates/phlcitycouncil/election_detail.html
+++ b/phlcitycouncil/templates/phlcitycouncil/election_detail.html
@@ -2,28 +2,21 @@
 
 {% block content %}
 
-<h1>Election</h1>
+<h1>{{ election.election_date|date:"Y"}} {{ election.get_election_type_display }} Election for {{ election.election_seat }}</h1>
 
-<p>{{ election.election_date }} </p>
-<p>{{ election.election_type }}</p>
-<p>{{ election.election_seat }}</p>
-<p>{{ election.candidate_set.all }}</p>
+<p>Election date: {{ election.election_date }} </p>
 
-<!-- <p>Gender: {{ person.get_gender_display}} </p>
-<p>Race: {{ person.get_race_display }} </p>
-
-<p>Date of Birth: {{ person.date_of_birth }} </p>
-<p>Date of Death: {{ person.date_of_death }} </p>
-
-
-
-<h2>Elections</h2>
+<h2>Candidates</h2>
 <ul>
-{% for p in person.candidate_set.all %}
+{% for c in election.candidate_set.all %}
 
-<li> {{ p.candidate_election.election_date|date:"Y" }} {{ p.candidate_election.get_election_type_display }} Election, {{ p.candidate_election.election_seat.get_seat_name_display }}: {{ p.get_candidate_results_display }}</li>
+<li>{{ c.candidate_person }}</li>
 
 {% endfor %}
-</ul> -->
+
+</ul>
+
+</p>
+
 {% endblock %}
 
