--- a/phlcitycouncil/templates/base_generic.html
+++ b/phlcitycouncil/templates/base_generic.html
@@ -17,7 +17,7 @@
         <ul class="sidebar-nav">
           <li><a href="{% url 'index' %}">Home</a></li>
           <li><a href="{% url 'person' %}">All Persons</a></li>
-          <li><a href="">All authors</a></li>
+          <li><a href="{% url 'election' %}">All Elections</a></li>
         </ul>
      {% endblock %}
       </div>
