--- a/phlcitycouncil/templates/phlcitycouncil/election_list.html
+++ b/phlcitycouncil/templates/phlcitycouncil/election_list.html
@@ -24,6 +24,18 @@
 {% endfor %}
 
 <hr>
+<h2>2019 Primary Election</h2>
+{% for el in election.primary2019 %}
+<a href=" {{ el.get_absolute_url }}">{{ el }}</a>; 
+{{ el.candidate_set.all.count }} candidate{{ el.candidate_set.all.count|pluralize }}
+{% if el.candidate_set.all.count == 1 %} (Unopposed) {% endif %}
+<br> 
+{% endfor %}
+
+
+
+
+<hr>
 <h2>2015 General Election</h2>
 {% for el in election.general2015 %}
 <a href=" {{ el.get_absolute_url }}">{{ el }}</a>; 
