lots of playing around with views and templates

--- a/phlcitycouncil/templates/phlcitycouncil/election_detail.html
+++ b/phlcitycouncil/templates/phlcitycouncil/election_detail.html
@@ -37,8 +37,16 @@
 
 <h2>Query set display (testing)</h2>
 
+** The queryset I want is: **
 {{ election.candidate_set.values }}
 ///end 
+
 <hr>
+
+'data_list' is:  {{ data_list }}
+
+<hr>
+
+'election' is {{ election }}
 
 {% endblock %}
