--- a/phlcitycouncil/templates/index.html
+++ b/phlcitycouncil/templates/index.html
@@ -4,9 +4,9 @@
   <h1>Philadelphia City Council</h1>
   <p>Information about Philadelphia City Council Elections</p>
   <p>The City Council App has the following record counts:</p>
-  <ul>
-    <li><strong><a href="{% url 'person' %}">Persons:</a></strong> {{ num_persons }}</li>
-    <li><strong><a href="{% url 'election' %}">Elections:</a></strong> {{ num_seats }}</li>
+  <ul class="list-group">
+    <li class="list-group-item"><strong><a href="{% url 'person' %}">Persons:</a></strong> {{ num_persons }}</li>
+    <li class="list-group-item"><strong><a href="{% url 'election' %}">Elections:</a></strong> {{ num_seats }}</li>
 
   </ul>
 {% endblock %}
