apply some bootstrap styles to election list template

--- a/phlcitycouncil/templates/phlcitycouncil/election_list.html
+++ b/phlcitycouncil/templates/phlcitycouncil/election_list.html
@@ -5,40 +5,106 @@
 
 <h1>Philadelphia City Council Elections</h1>
 
-<hr>
-<h2>2022 Special Election</h2>
-{% for el in election.special2022 %}
-<a href=" {{ el.get_absolute_url }}">{{ el }}</a>; 
-{{ el.candidate_set.all.count }} candidate{{ el.candidate_set.all.count|pluralize }}
-{% if el.candidate_set.all.count == 1 %} (Unopposed) {% endif %}
-<br> 
-{% endfor %}
+<div id="accordion">
 
-<hr>
-<h2>2019 General Election</h2>
-{% for el in election.general2019 %}
-<a href=" {{ el.get_absolute_url }}">{{ el }}</a>; 
-{{ el.candidate_set.all.count }} candidate{{ el.candidate_set.all.count|pluralize }}
-{% if el.candidate_set.all.count == 1 %} (Unopposed) {% endif %}
-<br> 
-{% endfor %}
+    <div class="card">
+      <div class="card-header">
+        <a class="btn" data-bs-toggle="collapse" href="#specialz">
+          2022 Special Election
+        </a>
+      </div>
+      <div id="specialz" class="collapse show" data-bs-parent="#accordion">
+        <div class="card-body">
+            <ul class="list-group">
+                {% for el in election.special2022 %}
+                <li class="list-group-item">
+                    <a href=" {{ el.get_absolute_url }}">{{ el }}</a>; 
+                    {{ el.candidate_set.all.count }} candidate{{ el.candidate_set.all.count|pluralize }}
+                    {% if el.candidate_set.all.count == 1 %} (Unopposed) {% endif %}
+                </li>
+                {% endfor %}
+            </ul>        
+        </div>
+      </div>
+    </div>
 
-<hr>
-<h2>2019 Primary Election</h2>
-{% for el in election.primary2019 %}
-<a href=" {{ el.get_absolute_url }}">{{ el }}</a>; 
-{{ el.candidate_set.all.count }} candidate{{ el.candidate_set.all.count|pluralize }}
-{% if el.candidate_set.all.count == 1 %} (Unopposed) {% endif %}
-<br> 
-{% endfor %}
 
-<hr>
-<h2>2015 General Election</h2>
-{% for el in election.general2015 %}
-<a href=" {{ el.get_absolute_url }}">{{ el }}</a>; 
-{{ el.candidate_set.all.count }} candidate{{ el.candidate_set.all.count|pluralize }}
-{% if el.candidate_set.all.count == 1 %} (Unopposed) {% endif %}
-<br> 
-{% endfor %}
+
+
+    <div class="card">
+      <div class="card-header">
+        <a class="collapsed btn" data-bs-toggle="collapse" href="#general2019">
+         2019 General Election        
+        </a>
+      </div>
+      <div id="general2019" class="collapse" data-bs-parent="#accordion">
+        <div class="card-body">
+            <ul class="list-group">
+                {% for el in election.general2019 %}
+                <li class="list-group-item">
+                    <a href=" {{ el.get_absolute_url }}">{{ el }}</a>; 
+                    {{ el.candidate_set.all.count }} candidate{{ el.candidate_set.all.count|pluralize }}
+                    {% if el.candidate_set.all.count == 1 %} (Unopposed) {% endif %}
+                </li>
+                {% endfor %}
+            </ul>        
+        </div>
+      </div>
+    </div>
+  
+
+
+    <div class="card">
+      <div class="card-header">
+        <a class="collapsed btn" data-bs-toggle="collapse" href="#primary2019">
+            2019 Primary Election        
+        </a>
+      </div>
+      <div id="primary2019" class="collapse" data-bs-parent="#accordion">
+        <div class="card-body">
+            <ul class="list-group">
+                {% for el in election.primary2019 %}
+                <li class="list-group-item">
+                    <a href=" {{ el.get_absolute_url }}">{{ el }}</a>; 
+                    {{ el.candidate_set.all.count }} candidate{{ el.candidate_set.all.count|pluralize }}
+                    {% if el.candidate_set.all.count == 1 %} (Unopposed) {% endif %}
+                </li>
+                {% endfor %}
+            </ul>        
+        </div>
+      </div>
+    </div>
+  
+
+
+    <div class="card">
+      <div class="card-header">
+        <a class="collapsed btn" data-bs-toggle="collapse" href="#general2015">
+            2015 General Election        
+        </a>
+      </div>
+      <div id="general2015" class="collapse" data-bs-parent="#accordion">
+        <div class="card-body">
+            <ul class="list-group">
+                {% for el in election.general2015 %}
+                <li class="list-group-item">
+                    <a href=" {{ el.get_absolute_url }}">{{ el }}</a>; 
+                    {{ el.candidate_set.all.count }} candidate{{ el.candidate_set.all.count|pluralize }}
+                    {% if el.candidate_set.all.count == 1 %} (Unopposed) {% endif %}
+                </li>
+                {% endfor %}
+            </ul>        
+        </div>
+      </div>
+    </div>
+  
+  
+
+</div>
+
+
+
+
+
 
 {% endblock %}
