collapse all on load

--- a/phlcitycouncil/templates/phlcitycouncil/election_list.html
+++ b/phlcitycouncil/templates/phlcitycouncil/election_list.html
@@ -14,7 +14,7 @@
         {{ e.election_text }}
       </a>
     </div>
-    <div id="{{e.election_tag}}" class="collapse show" data-bs-parent="#accordion">
+    <div id="{{e.election_tag}}" class="collapse" data-bs-parent="#accordion">
       <div class="card-body">
           <ul class="list-group">
 
