count Elections, not Seats

--- a/phlcitycouncil/templates/index.html
+++ b/phlcitycouncil/templates/index.html
@@ -6,7 +6,7 @@
   <p>The City Council App has the following record counts:</p>
   <ul class="list-group">
     <li class="list-group-item"><strong><a href="{% url 'person' %}">Persons:</a></strong> {{ num_persons }}</li>
-    <li class="list-group-item"><strong><a href="{% url 'election' %}">Elections:</a></strong> {{ num_seats }}</li>
+    <li class="list-group-item"><strong><a href="{% url 'election' %}">Elections:</a></strong> {{ num_elections }}</li>
 
   </ul>
 {% endblock %}
